--- a/wordcount/templates/result.html
+++ b/wordcount/templates/result.html
@@ -1,4 +1,4 @@
-<h1>당신이 입력한 텍스트는 {{ total }}로 구성되어 있습니다. </h1>
+<h1>당신이 입력한 텍스트는 {{ total }}로 구성되어 있습니다. 뿅!</h1>
 
 <a href="{% url 'home' %}"> 다시 하기 </a>
 <br>
